--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-### Example user template
+*.pyc
+__pycache__/
 
-# IntelliJ project files
 .idea
 *.iml
 out
